--- a/Restoftheworld.css
+++ b/Restoftheworld.css
@@ -23,6 +23,7 @@ html:focus-within {
 html, body {
   height: 100%;
   font-family: 'Poppins', sans-serif;
+  overflow-x: hidden;
 }
 
 body {
