--- a/home.css
+++ b/home.css
@@ -22,7 +22,7 @@ html:focus-within {
 html, body {
   height: 100%;
   font-family: 'Poppins', sans-serif;
-  overflow:auto;
+  overflow-x: hidden;
 }
 
 body {
